--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3966,7 +3966,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.18.0:
 
--Support for new cookie stanard 'SameSite', explicitly set to strict for privacy
+-Support for new cookie standard 'SameSite', explicitly set to strict for privacy
 
 -Refactored / cleaned javascript
 
