--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3966,7 +3966,9 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.18.0:
 
--Support for new cookie standard 'SameSite', explicitly set to strict for privacy
+-Support for new REQUIRED cookie standard 'SameSite', explicitly set to strict for privacy
+
+-Upgraded Bittrex / Binance / Gateio / HitBTC / OkCoin APIs to latest versions
 
 -Refactored / cleaned javascript
 
