Semantics, default config revisions
Semantics, default config revisions

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -215,6 +215,9 @@ MAYBE SECTION
 ///////////////////////////////////////////////////////
 
 
+See if zingchart can do a moving average line?
+
+
 Alerts when RSS feeds have new entries?
 
 
