--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4024,6 +4024,20 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 
 
+-------------------------------------------------------------------
+4.20.1:
+
+-API fix (Multiple-connection throttling / fallback for Defipulse.com API connections)
+
+-Misc UX
+
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
