--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4037,6 +4037,20 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 
 
+-------------------------------------------------------------------
+4.21.0:
+
+-Misc UX
+
+-------------------------------------------------------------------
+
+
+
+
+
+
+
+
 
 
 
