Defipulse API limit warning, default config revision
Defipulse API limit warning, default config revision

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4040,6 +4040,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.21.0:
 
+-Default config revision
+
 -Misc UX
 
 -------------------------------------------------------------------
