Optimizations, UX, version bump
Optimizations, UX, version bump

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4059,6 +4059,21 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 
 
+-------------------------------------------------------------------
+4.22.0:
+
+-Optimizations
+
+-UX
+
+-------------------------------------------------------------------
+
+
+
+
+
+
+
 
 
 
