--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4018,7 +4018,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.20.0:
 
--Initial support for DeFi markets (uniswap, uniswap-v2, balancer, bancor, curve), via the defipulse.com API
+-Initial support for DeFi markets (uniswap, balancer, bancor, curve), via the defipulse.com API
 
 -------------------------------------------------------------------
 
@@ -4062,7 +4062,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.22.0:
 
--Option to use a 'Generic' DeFi market (whatever has most USD volume on DeFiPulse.com API), or a specific platform (uniswap, uniswap-v2, balancer, curve, bancor)
+-Switched to using 'Generic' DeFi markets (whatever has most USD volume on DeFiPulse.com API), as the DeFiPulse.com API is unfortunately very sketchy with platform-specific requests
 
 -Cron plugin available (DISABLED BY DEFAULT in power user config) for detecting new Decred proposals, and detecting when voting starts on them
 
