UX, version bump
UX, version bump

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4076,6 +4076,20 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 
 
+-------------------------------------------------------------------
+4.23.0:
+
+-Misc. UX
+
+-------------------------------------------------------------------
+
+
+
+
+
+
+
+
 
 
 
