--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -89,6 +89,9 @@ Add a "Reset lite charts" button on the admin 'Reset' page, to trigger rebuildin
 Add unlimited (seperate) recurring reminders capability to reminder cron plugin.
 
 
+Add a "calculate current portfolio's performance in BTC and [fiat currency] over LITE CHART time periods" feature, which uses the currently-cached asset markets LITE CHARTS to create a chart showing what you current potfolio assets have been worth in BTC / Fiat over those time periods. This would help to more easily determine non-performant assets, and aid in more efficient portfolio rebalancing.
+
+
 Option to use new zip file encryption password feature to encrypt portfolio spreadsheet exports when downloading exported portfolio data (with password entered in the UI, #NOT# $app_config['general']['backup_archive_password']).
 
 
@@ -198,9 +201,6 @@ Add market stats summaries from chart data, like pie charts for exchange volume 
 
 
 Simple trading bot, to run from cron / cli (with SQL-based admin authentication / web UI for configuration)
-
-
-Add a "calculate current portfolio's performance in BTC and [fiat currency] over X time period" feature, which uses the currently-cached asset markets charts to create a downloadable chart showing what you current potfolio assets have been worth in BTC / Fiat over X time period. This would help to more easily determine non-performant assets, and aid in efficient portfolio rebalancing.
 
 
 ///////////////////////////////////////////////////////
