Revised default config / semantics, refactored cron plugin system
Revised default config / semantics, refactored cron plugin system

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4079,6 +4079,10 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.23.0:
 
+-Refactored cron plugin system
+
+-Revised default config, including semantics for UX
+
 -Misc. UX
 
 -------------------------------------------------------------------
