Change 'crypto value' feature, code cleanup, doc revisions
Change 'crypto value' feature, code cleanup, doc revisions

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4096,7 +4096,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.23.0:
 
--"Crypto Value" of your entire portfolio in a few of the most popular grass roots cryptocurrencies
+-"Crypto Value" of your entire portfolio in selected cryptocurrencies (on settings page)
 
 -Misc. UX
 
