Final cleanup before v4.22.2 release
Final cleanup before v4.22.2 release

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -26,6 +26,9 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
+Look into upbit API acting up.
+
+
 Look into adding https://1inch.exchange/#/ to DeFi APIs.
 
 
