Asset performance comparison chart bug fixes
Asset performance comparison chart bug fixes

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4128,7 +4128,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.23.1:
 
--Bug fix for new Asset Performance Comparision chart (same end/last values canceled each other out)
+-Bug fixes for new Asset Performance Comparision chart (same last values overwrite, 0.00% start, small screen compatibility)
 
 -Better UX for system chart sensor anomalies (vertical axis scale kept in check / adjustable in Admin Config POWER USER section)
 
