UX / UI fixes on asset comparision chart
UX / UI fixes on asset comparision chart

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4142,6 +4142,16 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 
 
+-------------------------------------------------------------------
+4.23.2:
+
+-Minor bug fixes for the Asset Performance Comparision chart rendering
+
+-------------------------------------------------------------------
+
+
+
+
 
 
 
