Code freeze / review / final testing for v4.23.2 upcoming release
Code freeze / review / final testing for v4.23.2 upcoming release

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4151,6 +4151,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Misc. bug fixes / UX improvements / optimizations
 
+-New developer settings in Admin Config
+
 -------------------------------------------------------------------
 
 
