--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4160,7 +4160,9 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.24.0:
 
--USD Marketcap Comparison chart, to visually see marketcap size differences.
+-Marketcap data (in tooltip windows / charts / etc) now includes diluted / total marketcap info (if available)
+
+-USD Marketcap Comparison chart, to visually see marketcap size differences
 
 -Error / debug logging semantics
 
