--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4158,7 +4158,9 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 
 -------------------------------------------------------------------
-4.24.0:
+4.23.3:
+
+-Bug fix for 'View More Stats' link not showing, when all assets are 'watch only'
 
 -Marketcap data (in tooltip windows / charts / etc) now includes diluted / total marketcap info (if available)
 
